<resources>
    <string name="app_name">SHOE STORE</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">REGISTER</string>
    <string name="action_login">LOGIN</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="shoe_list">SHOE LIST</string>
    <string name="add_new_shoe">ADD NEW SHOE</string>

    <!-- sample texts are borrowed from https://www.zappos.com/ for filling text fields with some non-important content -->
    <string name="sample_text1">Sample text 1 \n\n At shoe.com, our purpose is simple: to live and deliver WOW. \n \n
        Twenty years ago, we began as a small online retailer that only sold shoes. Today, we still sell shoes — as well as clothing, handbags, accessories, and more.
        That more is providing the very best customer service, customer experience, and company culture. We aim to inspire the world by showing it\'s possible to
        simultaneously deliver happiness to customers, employees, vendors, shareholders, and the community in a long-term, sustainable way.\n \n
        We hope that in the future people won\'t even realize we started selling shoes online. Instead, they\'ll know shoe as a service company that just happens to sell ________.\n</string>
    <string name="sample_text2">Sample text 2 \n\n
        The year was 1999, and Nick Somebody was shopping at a San Francisco mall looking for a pair of brown Airwalk Desert Chukka boots. One store had the right style,
        but not the right color. Another store had the right color, but not the right size. Searching for hours, Nick left empty-handed and frustrated. \n\n
        At that moment, by identifying the gap between what customers needed and what online retail could accomplish, Nick decided to quit his day job and solve this problem himself. \n\n
        The idea was simple in concept but not so simple in execution. Nick wanted to serve customers who resorted to catalogs and mail orders for the shoes they wanted but
        couldn’t find in their local stores. So, he launched ShoeSite.com, which soon changed to shoe.com. With years of hard work, shoe now carries thousands of footwear products
        to meet every need and occasion.</string>

    <string name="logout">LOGOUT</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="save">Save</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="password_is_empty">Password is empty</string>

    <string name="login_to_shoe_store">LOGIN TO SHOE STORE</string>
    <string name="welcome_to_shoe_store">WELCOME TO SHOE STORE</string>
    <string name="shoe_details">SHOE DETAILS</string>
</resources>
