<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/nameLabel"
            style="@style/otherLabel"
            android:paddingStart="@dimen/label_padding"
            android:paddingEnd="@dimen/label_padding"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/companyLabel"
            app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/companyLabel"
            style="@style/otherLabel"
            android:paddingStart="@dimen/label_padding"
            android:paddingEnd="@dimen/label_padding"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/sizeLabel"
            app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/otherLabel"
            android:paddingStart="@dimen/label_padding"
            android:paddingEnd="@dimen/label_padding"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
            app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/otherLabel"
            android:paddingStart="@dimen/label_padding"
            android:paddingEnd="@dimen/label_padding"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeLabel" />

        <EditText
            android:id="@+id/nameText"
            style="@style/otherText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusDown="@id/companyText"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/companyText"
            style="@style/otherText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusDown="@id/sizeText"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel" />

        <EditText
            android:id="@+id/sizeText"
            style="@style/otherText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/descriptionText"
            app:layout_constraintBaseline_toBaselineOf="@+id/sizeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel" />

        <EditText
            android:id="@+id/descriptionText"
            style="@style/otherText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusDown="@id/saveButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/descriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/buttonLogin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText"
            app:layout_constraintVertical_bias="0.050000012" />

        <Button
            android:id="@+id/saveButton"
            style="@style/buttonLogin"
            android:layout_marginEnd="48dp"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>